[gd_scene load_steps=7 format=3 uid="uid://r3xkgrl88g4y"]

[ext_resource type="Script" path="res://scripts/settings_dialog.gd" id="1_pp3s2"]
[ext_resource type="Texture2D" uid="uid://b753reba7ap05" path="res://Assets/Sprites/Arrow.png" id="3_e3ucp"]
[ext_resource type="PackedScene" uid="uid://dem0faue30pxw" path="res://Scenes/vol_slider.tscn" id="3_vpvl7"]

[sub_resource type="LabelSettings" id="LabelSettings_fsee7"]
font_size = 22

[sub_resource type="LabelSettings" id="LabelSettings_f2b5t"]
font_size = 21

[sub_resource type="LabelSettings" id="LabelSettings_2re4k"]
font_size = 21

[node name="SettingsDialog" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1570.0
offset_bottom = -565.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.79427, 1.79427)
script = ExtResource("1_pp3s2")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.197937, 0.197937, 0.197937, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("3_e3ucp")

[node name="TitleLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Settings"
label_settings = SubResource("LabelSettings_fsee7")
horizontal_alignment = 1

[node name="ResoultionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Resolution:"
label_settings = SubResource("LabelSettings_f2b5t")
horizontal_alignment = 1

[node name="Resolutions" type="OptionButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
selected = 1
item_count = 4
popup/item_0/text = "2560 x 1440"
popup/item_0/id = 1
popup/item_1/text = "1920 x 1080"
popup/item_1/id = 1
popup/item_2/text = "1366 x 768"
popup/item_2/id = 2
popup/item_3/text = "1280 x 720"
popup/item_3/id = 3

[node name="AudioLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Master Volume:"
label_settings = SubResource("LabelSettings_2re4k")
horizontal_alignment = 1

[node name="VolSlider" parent="VBoxContainer" instance=ExtResource("3_vpvl7")]
unique_name_in_owner = true
layout_mode = 2

[node name="AudioLabel2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Sound Effects Volume:"
label_settings = SubResource("LabelSettings_2re4k")
horizontal_alignment = 1

[node name="VolSlider2" parent="VBoxContainer" instance=ExtResource("3_vpvl7")]
unique_name_in_owner = true
layout_mode = 2
bus_name = "Sound Effects"

[node name="AudioLabel3" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Music Volume:"
label_settings = SubResource("LabelSettings_2re4k")
horizontal_alignment = 1

[node name="VolSlider3" parent="VBoxContainer" instance=ExtResource("3_vpvl7")]
unique_name_in_owner = true
layout_mode = 2
bus_name = "Music"

[node name="LanguageLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Language:"
label_settings = SubResource("LabelSettings_2re4k")
horizontal_alignment = 1

[node name="Languages" type="OptionButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
selected = 0
item_count = 1
popup/item_0/text = "English"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="item_selected" from="VBoxContainer/Resolutions" to="." method="_on_resolutions_item_selected"]
